--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,41 @@
 /* start navigation */
 .custom-navbar {
     background-color: #fff;
-    padding-top: 50px;
+    padding-top: 40px;
     margin-left:5em;
     margin-right:5em;
 }
 
 .navbar-brand, .navbar-brand:hover  {
-  color: #2E3542;
+      display: inline-block;
+      font-family: 'Montserrat', sans-serif;
+      height: 38px;
+      padding: 0 20px;
+      text-align: center;
+      font-size: 14px;
+      line-height: 38px;
+      letter-spacing: .01rem;
+      text-decoration: none;
+      color: 	#C0C0C0;
 
-
-	font-family: 'Do Hyeon', sans-serif;
-		/* font-weight: 500; */
-		font-style: normal;
-		font-size: 21px;
 		text-rendering: optimizeLegibility;
 		transition: all 0.3s ease-in-out;
 }
 
-
 .custom-navbar .nav li a {
 		color: 	#C0C0C0;
-		font-family: 'Muli', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-size: 14px;
+letter-spacing: .01rem;
+
+
+
 		/* font-weight: 500; */
-		font-style: normal;
-		font-size: 16px;
-		letter-spacing: .01em;
-		text-rendering: optimizeLegibility;
+
 }
 .custom-navbar .nav li a:hover {
     /* background: #FF8C5F; */
-    color: #303030;
+    color: #F15C48;
     transition: all 0.3s ease-in-out;
 }
 
@@ -40,7 +45,7 @@
 }
 
 .custom-navbar .nav li.active > a {
-    color: #303030;
+    color: #F15C48;
     font-weight: bold;
 }
 
@@ -53,23 +58,6 @@
     background: #303030;
     border-color: transparent;
 }
-
-
-@media(min-width:768px){
-    .custom-navbar {
-        background:#fff;
-        border-bottom: 0;
-        background: 0 0;
-          background-color: #fff;
-    }
-    .custom-navbar.top-nav-collapse {
-        background:#fff;
-        border-bottom: 1px solid #eeeeee;
-    }
-
-
-}
-
 
 
 .deckbutton {
