--- a/css/project.css
+++ b/css/project.css
@@ -1,5 +1,3 @@
-
-
 /* start navigation */
 .custom-navbar {
     background-color: #fff;
@@ -9,29 +7,31 @@
 }
 
 .navbar-brand, .navbar-brand:hover  {
-  color: 	#C0C0C0;
-font-family: 'Raleway', sans-serif;
-		font-style: normal;
-		font-size: 16px;
-    letter-spacing: .01em;
+      display: inline-block;
+      font-family: 'Montserrat', sans-serif;
+      height: 38px;
+      padding: 0 20px;
+      text-align: center;
+      font-size: 14px;
+      line-height: 38px;
+      letter-spacing: .01rem;
+      text-decoration: none;
+      color: 	#C0C0C0;
+
 		text-rendering: optimizeLegibility;
 		transition: all 0.3s ease-in-out;
-}
-.navbar-brand:hover  {
-  color: #F15C48;
-  transition: all 0.3s ease-in-out;
-
 }
 
 
 .custom-navbar .nav li a {
 		color: 	#C0C0C0;
-font-family: 'Raleway', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-size: 14px;      letter-spacing: .01rem;
+
+
+
 		/* font-weight: 500; */
-		font-style: normal;
-		font-size: 16px;
-		letter-spacing: .01em;
-		text-rendering: optimizeLegibility;
+
 }
 .custom-navbar .nav li a:hover {
     /* background: #FF8C5F; */
@@ -57,20 +57,6 @@ font-family: 'Raleway', sans-serif;
 .custom-navbar .navbar-toggle .icon-bar {
     background: #303030;
     border-color: transparent;
-}
-
-
-@media(min-width:768px){
-    .custom-navbar {
-        background:#fff;
-        border-bottom: 0;
-        background: 0 0;
-          background-color: #fff;
-    }
-    .custom-navbar.top-nav-collapse {
-        background:#fff;
-        border-bottom: 1px solid #eeeeee;
-    }
 }
 
 
