--- a/css/project.css
+++ b/css/project.css
@@ -212,6 +212,43 @@ img {
   color: white;
 }
 
+
+.button2 {
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    height: 50px;
+    padding: 0 20px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer;
+  background-color: #f5f5f5;
+  color: #006446;
+  border: 2px solid #181A21;
+}
+
+
+
+.button2:hover {
+  background-color: #181A21;
+  color: white;
+}
+
+
+.lexmarklink {
+      letter-spacing: .01rem;
+      text-decoration:underline;
+       color: #2E3542;;
+font-weight:bold;
+		text-rendering: optimizeLegibility;
+		transition: all 0.3s ease-in-out;
+}
+
+
 /* Content */
 
 .center {
@@ -317,7 +354,7 @@ margin-top: 5em;
 
 
 .contentblock{
-	padding-bottom: 5em;
+	padding-bottom: 15%;
 }
 
 #gifbg{
