--- a/css/project.css
+++ b/css/project.css
@@ -357,6 +357,10 @@ margin-top: 5em;
 	padding-bottom: 15%;
 }
 
+.intro{
+	padding-bottom: 5%;
+}
+
 #gifbg{
 	padding-top: 120px;
 	padding-bottom: 120px;
