--- a/css/index.css
+++ b/css/index.css
@@ -176,10 +176,11 @@ p{
 
 
 h1{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   padding-top: 10%;
   font-style: normal;
+  padding-bottom: 10%;
   /* font-weight: bold; */
   letter-spacing: -.03em;
   color: #2E3542;
@@ -187,8 +188,8 @@ h1{
 
 
 h2{
-font-size: 34px;
-font-family: 'Raleway', sans-serif;
+font-size: 28px;
+font-family: 'Montserrat', sans-serif;
 font-style: normal;
 font-weight: 600;
 color: #2E3542;
