--- a/css/about.css
+++ b/css/about.css
@@ -93,7 +93,7 @@ color: #2E3542;
 
 
 #aboutphotos {
-padding-top: 50px;
+/* padding-top: 20px; */
 position: relative;
 max-width: 1000px;
 margin: 0 auto;
@@ -176,7 +176,7 @@ p{
 
 
 h1{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Assistant', sans-serif;
   font-size: 18px;
   padding-top: 10%;
   font-style: normal;
@@ -224,11 +224,12 @@ h3{
   }
 
 h4{
-  font-family: 'Raleway', sans-serif;
-  font-size: 13px;
+  font-family: 'Assistant', sans-serif;
+  font-size: 19px;
   font-style: normal;
+  font-weight:bold;
   line-height: normal;
-  letter-spacing: .1em;
+  /* letter-spacing: .1em; */
   color: #2E3542;
 }
 
