--- a/css/project.css
+++ b/css/project.css
@@ -30,7 +30,7 @@ padding-top: .7em;
 
 .navbar-brand, .navbar-brand:hover  {
       display: inline-block;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Raleway', sans-serif;
       height: 38px;
       padding: 0 20px;
       text-align: center;
@@ -47,7 +47,7 @@ padding-top: .7em;
 
 .custom-navbar .nav li a {
 		color: 	#C0C0C0;
-font-family: 'Montserrat', sans-serif;
+font-family: 'Raleway', sans-serif;
 font-size: 14px;      letter-spacing: .01rem;
 
 
