--- a/css/index.css
+++ b/css/index.css
@@ -176,8 +176,8 @@ p{
 
 
 h1{
-  font-family: 'PT Sans', sans-serif;
-  font-size: 36px;
+  font-family: 'Barlow', sans-serif;
+  font-size: 34px;
   padding-top: 10%;
   font-style: normal;
   padding-bottom: 5%;
@@ -189,8 +189,8 @@ h1{
 
 
 h2{
-font-size:22px;
-font-family: 'Karla', sans-serif;
+font-size:15px;
+font-family: 'Raleway', sans-serif;
 font-style: normal;
 /* font-weight: 600; */
 color: #2E3542;
