--- a/css/index.css
+++ b/css/index.css
@@ -216,7 +216,7 @@ letter-spacing: .01rem;
 
 
 p{
-  font-family: 'Assistant', sans-serif;
+  font-family: 'Barlow', sans-serif;
   font-size: 27px;
   font-style: normal;
   font-weight: bold;
